--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.2.18",
-    "todomvc-common": "~0.1.4"
+    "todomvc-common": "~0.3.1"
   },
-  "devDependencies": {
-    "angular-mocks": "1.2.18",
-    "angular-route": "1.2.18"
+  "resolutions": {
+    "todomvc-common": "~0.3.1"
   }
 }
