--- a/package.json
+++ b/package.json
@@ -1,29 +1,46 @@
 {
-  "name": "todomvc-angular",
+  "name": "todos-strongloop",
   "version": "0.1.0",
   "description": "",
-  "main": "grunt build",
+  "scripts": {
+    "build": "gulp build"
+  },
   "repository": {
     "type": "git",
-    "url": "git@github.com/aerobatic/todomvc-angular.git"
+    "url": "git@github.com/aerobatic/todos-strongloop.git"
   },
   "author": "David Von Lehman",
+  "dependencies": {
+    "angular": "^1.3.5",
+    "angular-aerobatic": "^1.0.4",
+    "angular-animate": "^1.3.5",
+    "angular-resource": "^1.3.10",
+    "angular-route": "^1.3.10",
+    "angular-scroll": "^0.6.2",
+    "angular-ui-router": "^0.2.13",
+    "normalize.css": "^3.0.2"
+  },
   "devDependencies": {
+    "angular-mocks": "^1.3.5",
+    "del": "^1.1.0",
     "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-stylus": "^0.17.0",
-    "grunt-contrib-uglify": "^0.5.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-sass": "^0.7.3",
-    "grunt-jslint": "^1.1.12",
-    "grunt-aerobatic": "^0.1.7",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-ngmin": "0.0.3",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-karma": "^0.8.3",
-    "karma-jasmine": "^0.1.5",
-    "karma-chrome-launcher": "^0.1.4"
+    "grunt-loopback-sdk-angular": "^1.1.2",
+    "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.2",
+    "gulp-jade": "^0.10.0",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-minify-html": "^0.1.7",
+    "gulp-ng-annotate": "^0.4.0",
+    "gulp-ng-html2js": "^0.1.8",
+    "gulp-stylus": "^1.3.4",
+    "gulp-uglify": "^1.0.1",
+    "karma": "^0.12.28",
+    "nib": "^1.0.4",
+    "rimraf": "^2.2.8",
+    "run-sequence": "^1.0.2",
+    "stream-series": "^0.1.1"
+  },
+  "_aerobatic": {
+    "appId": "byo57DZW5"
   }
 }
